--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -22,7 +22,6 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.2",
-    "sqlite3": "^5.1.7"
+    "sequelize": "^6.31.1"
   }
 }
